@@ -46,6 +46,7 @@
 		function debugfunction()
 		{
 			global $debugfunction;
+
 			if($debugfunction)
 			{
 				print "<b>XML Sent:</b><br><br>";
