@@ -1,3 +1,8 @@
+7/31/2006 - jdiamond
+====================
+
+ * (trac #94) Fixed reseller club debug flag bug
+
 7/30/2006 - jdiamond
 ====================
 
